--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,10 +45,20 @@ jobs:
               -e RUN_ID=<< parameters.run_id >>_c \
               nduythanh1/selenium-earnvids-app > earn1_<< parameters.run_id >>.log 2>&1 &
       
-            # Earnvids B
+            # Videozz A
             docker run --rm \
               -e RUN_ID=<< parameters.run_id >>_d \
               nduythanh1/selenium-earnvids-app > earn2_<< parameters.run_id >>.log 2>&1 &
+            
+            # Videozz B
+            docker run --rm \
+              -e RUN_ID=<< parameters.run_id >>_e \
+              nduythanh1/selenium-chrome-app > earn3_<< parameters.run_id >>.log 2>&1 &
+            
+            # Earnvids B
+            docker run --rm \
+              -e RUN_ID=<< parameters.run_id >>_f \
+              nduythanh1/selenium-chrome-app > earn4_<< parameters.run_id >>.log 2>&1 &
       
             wait
             echo "✅ All 4 containers finished for RUN_ID: << parameters.run_id >>"
